syntax = "proto3";

package proto;

option go_package = "./;proto";

service MailService {
  rpc Send(SendMailRequest) returns (SendMailResponse);
}

message SendMailRequest {
  repeated string to = 1;
  string subject = 2;
  optional string text = 3;
  optional string templateName = 4;
  map<string, string> templateData = 5;
}

message SendMailResponse {
  int32 statusCode = 1;
  string message = 2;
}
